@@ -59,15 +59,19 @@ public class ShowReplacement {
     public void compileAll() throws Exception {
         CompilerUtils.cleanDir(CLASSES_DIR);
 
-        assertTrue(CompilerUtils.compile(Paths.get(TEST_SRC, "p"),
+        Path tmp = Paths.get("tmp");
+        assertTrue(CompilerUtils.compile(Paths.get(TEST_SRC, "src", "apple"), tmp));
+        assertTrue(CompilerUtils.compile(Paths.get(TEST_SRC, "src", "q"),
                                          CLASSES_DIR,
-                                         "-XaddExports:java.base/sun.security.util=ALL-UNNAMED"));
+                                         "-cp", tmp.toString(),
+                                         "--add-exports=java.base/sun.security.util=ALL-UNNAMED"));
     }
 
     @Test
     public void withReplacement() {
-        Path file = Paths.get("p", "WithRepl.class");
-        String[] output = JdepsUtil.jdeps("-jdkinternals", CLASSES_DIR.resolve(file).toString());
+        Path file = Paths.get("q", "WithRepl.class");
+        JdepsRunner jdeps = JdepsRunner.run("-jdkinternals", CLASSES_DIR.resolve(file).toString());
+        String[] output = jdeps.output();
         int i = 0;
         while (!output[i].contains("Suggested Replacement")) {
             i++;
@@ -90,10 +94,32 @@ public class ShowReplacement {
         }
     }
 
+    /*
+     * A JDK internal class has been removed while its package still exists.
+     */
     @Test
     public void noReplacement() {
-        Path file = Paths.get("p", "NoRepl.class");
-        String[] output = JdepsUtil.jdeps("-jdkinternals", CLASSES_DIR.resolve(file).toString());
+        Path file = Paths.get("q", "NoRepl.class");
+        JdepsRunner jdeps = JdepsRunner.run("-jdkinternals", CLASSES_DIR.resolve(file).toString());
+        String[] output = jdeps.output();
+        int i = 0;
+        // expect no replacement
+        while (i < output.length && !output[i].contains("Suggested Replacement")) {
+            i++;
+        }
+
+        // no replacement
+        assertEquals(output.length-i, 0);
+    }
+
+    /*
+     * A JDK internal package has been removed.
+     */
+    @Test
+    public void removedPackage() {
+        Path file = Paths.get("q", "RemovedPackage.class");
+        JdepsRunner jdeps = JdepsRunner.run("--jdk-internals", CLASSES_DIR.resolve(file).toString());
+        String[] output = jdeps.output();
         int i = 0;
         // expect no replacement
         while (i < output.length && !output[i].contains("Suggested Replacement")) {
